--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -8,13 +8,12 @@
 </head>
 <body class="bg-gray-100 flex flex-col min-h-screen">
 
-<!-- Navbar -->
 <nav class="bg-blue-900 text-white p-4 flex justify-between items-center w-full fixed top-0 left-0 z-50">
     <div class="text-2xl font-bold">Elite Motors</div>
     <ul class="flex space-x-6">
         <li><%= link_to 'Home', root_path, class: 'hover:underline' %></li>
         <% if logged_in? %>
-            <li><%= link_to 'Add Car', new_car_path, class: 'hover:underline' %></li>
+            <li><%= link_to 'Add Car', new_car_path, class: 'hover:underline' %></li> <!-- Pokaži samo če je uporabnik prijavljen -->
             <li class="font-semibold">Welcome, <%= current_user.name %></li>
             <li><%= link_to 'Logout', logout_path, method: :delete, class: 'hover:underline' %></li>
         <% else %>
@@ -23,6 +22,7 @@
         <% end %>
     </ul>
 </nav>
+
 
 
 <!-- Main Content -->
