--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,43 +1,31 @@
-<h1>Registracija</h1>
+<h2 class="text-2xl font-bold text-center mb-4">Registracija</h2>
 
-<%= form_with model: @user, local: true do |form| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> preprečuje, da bi obrazec bil shranjen:</h2>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+<%= form_with(model: @user, local: true) do |f| %>
+  <% if flash[:alert] %>
+    <div class="bg-red-500 text-white p-3 rounded mb-4">
+      <%= flash[:alert] %>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+  <div class="mb-4">
+    <%= f.label :name, "Ime" %>
+    <%= f.text_field :name, class: "p-3 border rounded w-full" %>
   </div>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
+  <div class="mb-4">
+    <%= f.label :email, "Email" %>
+    <%= f.email_field :email, class: "p-3 border rounded w-full" %>
   </div>
 
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.password_field :password %>
+  <div class="mb-4">
+    <%= f.label :password, "Geslo" %>
+    <%= f.password_field :password, class: "p-3 border rounded w-full" %>
   </div>
 
-  <div class="field">
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation %>
+  <div class="mb-4">
+    <%= f.label :password_confirmation, "Potrditev gesla" %>
+    <%= f.password_field :password_confirmation, class: "p-3 border rounded w-full" %>
   </div>
 
-  <div class="field">
-    <%= form.label :role %>
-    <%= form.select :role, ['admin', 'user'] %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit 'Registriraj se' %>
-  </div>
+  <%= f.submit "Registriraj se", class: "bg-blue-500 text-white p-3 rounded" %>
 <% end %>
