--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -31,7 +31,7 @@
 
     <!-- Search Filter -->
     <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-6xl mt-10">
-        <h2 class="text-2xl font-bold mb-4 text-center">Search for a Car</h2>
+        <h2 class="text-2xl font-bold mb-4 text-center">Search for a Caar</h2>
         <%= form_with url: cars_path, method: :get, local: true do |f| %>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <%= f.select :brand_id, options_from_collection_for_select(Brand.all, :id, :name, params[:brand_id]), { include_blank: 'All Brands' }, class: "p-3 border rounded" %>
