--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -60,6 +60,7 @@
                         <div class="mt-5 flex justify-between">
                             <%= link_to "View", car_path(car), class: "bg-gray-300 text-gray-700 p-2 rounded hover:bg-gray-400" %>
                             <% if logged_in? %>
+                            <%= button_to 'Odjava', logout_path, method: :delete, class: "bg-red-500 text-white p-3 rounded" %>
                                 <%= link_to "Edit", edit_car_path(car),  class: "bg-gray-500 text-white p-2 rounded hover:bg-gray-600" %>
                                 <%= link_to "Delete", car_path(car), method: :delete, data: { confirm: "Are you sure?" }, class: "bg-red-500 text-white p-2 rounded hover:bg-red-600" %>
                             <% end %>
