--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -76,13 +76,14 @@
             
             <!-- Share Button -->
             <button onclick="shareCar()" class="bg-green-500 text-white p-3 rounded hover:bg-green-600">Share</button>
-            
+            <% if user_signed_in? %>  <!-- Check if user is signed in -->
             <!-- Edit Button -->
             <%= link_to 'Edit Car', edit_car_path(@car), class: "bg-yellow-500 text-white p-3 rounded hover:bg-yellow-600" %>
-            
+    
             <!-- Delete Button -->
             <%= button_to 'Delete Car', @car, method: :delete, data: { confirm: 'Are you sure?' }, class: "bg-red-500 text-white p-3 rounded hover:bg-red-600" %>
-        </div>
+          <% end %>
+          </div>
     </div>
 </main>
 
